--- a/config/database.yml
+++ b/config/database.yml
@@ -21,10 +21,12 @@ test: &test
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8
+  database: bambi_production
+  username: root
+  password:
+
 
 cucumber:
   <<: *test
